--- a/styles/base.css
+++ b/styles/base.css
@@ -21,8 +21,31 @@ nav a {
 main {
     max-width: 760px;
     display: flex;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+.card {
+    box-shadow: 5px 5px 15px;
+    border-radius: 20px 20px 20px 10px;
+    text-align: left;
+    margin:10px;
+}
+
+.card p {
+    padding-left: 15px;
+    padding-bottom: 5px;
+}
+
+.card h3 {
+    background-color: rgb(93, 93, 167);
+    border-radius: 20px 20px 0 0;
+    /* box-shadow: 5px 5px 15px; */
+    padding: 10px;
+    width: 300px;
+    text-align: center;
+    
 }
 
 
