--- a/styles/base.css
+++ b/styles/base.css
@@ -2,6 +2,7 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
+    
 }
 nav {
     display: flex;
@@ -18,19 +19,50 @@ nav a {
     color:white
 }
 
+
+
+header {
+    background-color: lightgrey;
+}
+
+#my-pic {
+    margin-left: -100px;
+   
+}
 main {
     max-width: 760px;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    margin: 0 auto;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    padding-top:30px;
+    padding-bottom: 30px;
+   
+}
+
+#learning-activities {
+    grid-column: 1/2;
+    grid-row: 1/3;
+}
+
+#project {
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+
+#information {
+    grid-column: 2/3;
+    grid-row: 2/3;
 }
 
 .card {
     box-shadow: 5px 5px 15px;
-    border-radius: 20px 20px 20px 10px;
+    border-radius: 35px 20px 20px 10px;
     text-align: left;
     margin:10px;
+    background-color: lightgrey;
 }
 
 .card p {
@@ -48,13 +80,20 @@ main {
     
 }
 
+section {
+    max-width: 320px;
+}
+
 
 
 #main-h2 {
     margin:0 auto;
     text-align: center;
-    display: flex;
+  
 }
+
+
+
 
 a {
     color:black;
