--- a/styles/larger.css
+++ b/styles/larger.css
@@ -4,4 +4,14 @@
         flex-direction: column;
         
     }
+
+    footer {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+    }
+
+    main {
+        width: 100%;
+    }
 }
