--- a/styles/larger.css
+++ b/styles/larger.css
@@ -5,13 +5,11 @@
         
     }
 
-    footer {
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-    }
+    
 
     main {
         width: 100%;
+        display: block;
+
     }
 }
