--- a/styles/base.css
+++ b/styles/base.css
@@ -41,11 +41,15 @@ main {
 #my-pic {
     border-radius: 5px;
     box-shadow: 5px 5px 15px black;
+    height: 215px;
+    width: 180px;
+    
+
 }
 
 #my-name {
     margin: auto;
-    
+    padding-right: 190px;
 }
 
 #learning-activities {
