fixed the footer

--- a/styles/base.css
+++ b/styles/base.css
@@ -220,6 +220,7 @@ ul {
 footer {
     background-color: #38384d;
     color:white;
+    text-align: center;
     padding: 0.5rem;
     bottom: 0;
     width: 100%;
