--- a/styles/base.css
+++ b/styles/base.css
@@ -52,10 +52,10 @@ nav a {
 	color: #fff;
 }
 
-/* uncomment this
+/* uncomment this */
 li a.menu-item {
 	display: none;
-} */
+}
 
 li a.open {
 	display: flex;
