--- a/styles/base.css
+++ b/styles/base.css
@@ -2,7 +2,8 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
-
+    margin: 0;
+    width: 100%;
    
     
 }
@@ -14,6 +15,7 @@ nav {
     align-items: center;
     gap: 1rem;
     padding: 1rem;
+    width: 100%;
    
 }
 
@@ -80,6 +82,10 @@ main {
    
     
    
+}
+
+img#hero-picture {
+    width: 1320;
 }
 
 #my-pic {
@@ -196,6 +202,7 @@ section {
     margin:0 auto;
     text-align: center;
     padding-top: 20px;
+    display: none;
   
 }
 
@@ -210,6 +217,7 @@ header {
     display: flex;
     padding: 1rem;
     background-color: lightgrey;
+    width: 100%;
    
    
     }
