--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,3 +1,10 @@
+@media screen and (max-width:830px) {
+    div#temple-text {
+        position: absolute;
+        top:25%;
+    }
+}
+
 @media screen and (max-width:600px) {
     nav {
         display: flex;
@@ -19,6 +26,18 @@
     }
 
     img#hero-pic {
-        width: 400px;
+        width: 1400px;
+    }
+
+    div#temple-text {
+        position: absolute;
+        top:65%;
+    }
+}
+
+@media screen and (max-width:400px) {
+    div#temple-text {
+        position: absolute;
+        top:47%;
     }
 }
