--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -142,6 +142,18 @@ main {
     width: 100%;
 }
 
+#sidebar {
+    border-color: black;
+    border-style: solid;
+    border-radius: 10px;
+}
+
+#local-attractions {
+    border-color: black;
+    border-style: solid;
+    border-radius: 10px;
+}
+
 #my-pic {
     border-radius: 5px;
     box-shadow: 5px 5px 15px black;
