--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -49,13 +49,13 @@ nav a {
 
 .menu {
 	position: fixed;
-	top: 40;
-	right: 0;
+	top: 40px;
+	right: 0px;
 	list-style-type: none;
-	margin: 0;
-	padding: 0;
+	margin: 0px;
+	padding: 0px;
 	background: #f7f7f7;
-	z-index: 10;
+	z-index: 10px;
 	overflow: hidden;
 	box-shadow: 2px 0 20px rgba(0, 0, 0, 0.26);
 }
@@ -317,3 +317,4 @@ footer {
    
    
 }
+
