--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -36,6 +36,7 @@ body {
 #setubal-pic {
     width:81.5rem;
     height: 35rem;
+    margin-top:-16px;
 }
 
 #nav-div {
@@ -55,7 +56,7 @@ nav a {
 	margin: 0px;
 	padding: 0px;
 	background: #f7f7f7;
-	z-index: 10px;
+	/* z-index: 10px; */
 	overflow: hidden;
 	box-shadow: 2px 0 20px rgba(0, 0, 0, 0.26);
 }
@@ -129,7 +130,7 @@ main {
     max-width: 760px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     margin: 0 auto;
     justify-content: center;
     align-items: center;
@@ -316,5 +317,11 @@ footer {
    
    
    
+}
+
+#first-h {
+    grid-row: 1/2;
+    grid-column: 1/3;
+    margin: 0 auto;
 }
 
