--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -2,7 +2,8 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
-    background-image: url("images/setubal.jpg");
+    
+    overflow-x: hidden;
 
    
     
@@ -46,9 +47,7 @@ body {
     margin-top:-16px;
 }
 
-#nav-div {
-    background-image: url("images/setubal.jpg");
-}
+
 
 nav a {
     color:white
@@ -304,7 +303,7 @@ a {
 header {
     display: flex;
     padding: 1rem;
-    background-image: url("images/setubal.jpg");
+  
 
    
    
@@ -321,7 +320,7 @@ footer {
     color:white;
     text-align: center;
     padding: 0.5rem;
-    bottom: 0;
+   
     width: 100%;
    
    
@@ -337,6 +336,7 @@ footer {
 #menu-button {
     padding-top: 24px;
     padding-bottom: 24px;
+    padding-right: 30px;
 }
 
 div p {
