--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -11,6 +11,24 @@ body {
 
 
 
+.top {
+    padding-top: 10px;
+}
+
+form fieldset {
+    margin: 2rem 0;
+    border: #72739f 1px thin;
+    border-radius: 10px;
+    padding: 30px;
+}
+
+form legend {
+    padding: 0 10px;
+    margin: 0 10px;
+}
+
+
+
 #mode {
     padding-top: 24px;
     padding-bottom: 24px;
