improved the main layout

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -11,10 +11,7 @@ body {
 
 
 
-form {
-    background-color: ;
-    border: 10px;
-}
+
 
 form label.top {
     padding-top: 1rem;
@@ -418,7 +415,35 @@ footer {
     padding-right: 30px;
 }
 
-div p {
+
+
+
+
+#responsiveDiv section {
+    border: 5px solid black;
+    border-collapse: collapse;
+    padding: 20px;
+}
+
+.grid {
+    grid-row: 2/3;
+    grid-column: 1/4;
+  
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1f 1fr 1fr;
+    border: 10px solid white;
+}
+
+.flex {
+    display: flex;
+    flex-direction: column;
+}
+
+div#mode p {
     color: white;
 }
 
+#layoutBtns {
+    margin: 0 auto;
+}
