fixed a css error

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -431,7 +431,7 @@ footer {
   
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1f 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     border: 10px solid white;
 }
 
