fixed the mobile view of the grid

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -38,6 +38,16 @@
         width: 100%;
     }
 
+    .grid {
+        grid-row: 2/3;
+        grid-column: 1/4;
+      
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        border: 10px solid white;
+    }
+
     
 }
 
