--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -189,19 +189,38 @@ nav {
 #events {
     background-color: #001B2E;
     color: white;
-    border-radius: 10px 10px;
+    border-radius: 10px 10px 0 0;
+    margin-top: 0px;
 }
 
 #weather {
     background-color: #001B2E;
     color: white;
-    border-radius: 10px 10px;
+    margin-top: 0px;
+    border-radius: 10px 10px 0 0;
+    grid-column: 1/4;
+    grid-row: 1/2;
+}
+
+#temp-hoy {
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+
+#next3 {
+    grid-column: 2/4;
+}
+
+#icon {
+    grid-row: 4/5;
+    grid-column: 1/2;
 }
 
 #spotlight {
     background-color: #001B2E;
     color: white;
-    border-radius: 10px 10px;
+    margin-top: 0;
+    border-radius: 10px 10px 0 0;
 }
 section {
     text-align: center;
@@ -313,6 +332,12 @@ li a.open {
 #about {
     margin-right: 45px;
 } */
+
+#chamber-weather {
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+}
 
 #learning-activities {
     grid-column: 1/2;
