--- a/JavaScript/styles/base.css
+++ b/JavaScript/styles/base.css
@@ -105,7 +105,7 @@ picture img {
     height: auto;
 }
 
-#my-pic {
+.my-pic {
     border-radius: 5px;
     box-shadow: 5px 5px 15px black;
     height: 215px;
