--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -273,7 +273,7 @@ main {
     border-radius: 10px;
 }
 
-#my-pic {
+.my-pic {
     border-radius: 5px;
     box-shadow: 5px 5px 15px black;
     height: 215px;
@@ -407,6 +407,8 @@ a {
 
 header {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 1rem;
   
 
@@ -426,7 +428,7 @@ footer {
     text-align: center;
     padding: 0.5rem;
    
-    width: 100%;
+   
    
    
    
