--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -16,9 +16,9 @@
        
     }
 
-    nav {
+    /* nav {
         width: 100%;
-    }
+    } */
 
     #joinBtn {
         width: 48px;
@@ -56,3 +56,6 @@
     
 }
 
+@media screen and (min-width: 400px) and (max-width: 660px) {
+
+}
