--- a/chamber/styles/normalize.css
+++ b/chamber/styles/normalize.css
@@ -347,3 +347,10 @@ display: none;
 [hidden] {
 display: none;
 }
+
+@media screen and (min-width: 300px) and (max-width: 660px) {
+    main {
+        display:flex;
+        flex-direction: column;
+    }
+}
