--- a/week02/styles/design.css
+++ b/week02/styles/design.css
@@ -71,3 +71,12 @@ footer {
 	font-size: smaller;
 	text-align: left;
 }
+
+@media screen and (max-width: 650px) {
+	main {
+		display: flex;
+		flex-direction: column;
+		
+	}
+
+}
