--- a/week05/styles/prophets.css
+++ b/week05/styles/prophets.css
@@ -8,9 +8,18 @@ main {
     background-color: brown;
 }
 
+
+
 /* #cards img {
     padding-right: 50px;
 } */
 
+@media screen and (min-width: 390px) and (max-width: 660px) {
+    main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
 
 
